Fixes bug where order summary component stretches to be same height as checkout items.

--- a/src/components/order-summary/order-summary.styles.scss
+++ b/src/components/order-summary/order-summary.styles.scss
@@ -5,6 +5,7 @@
   width: 26%;
   display: flex;
   flex-direction: column;
+  align-self: flex-start;
 
   .order-summary-heading {
     font-weight: bold;
